@@ -1,3 +1,12 @@
+2007-07-15  Petr Ovtchenkov  <complement@users.sourceforge.net>
+
+	* src/strstream.cpp: "get end" pointer should be initialized
+	to the "begin of get + N" in obsolete strstream; bug #1536503,
+	thanks for Jean-Eric Cuendet;
+
+	* test/unit/strstream_buffer_read_test.cpp, build/test/unit/Makefile.inc:
+	test for bug above; [submitted by Jean-Eric Cuendet].
+
 2007-04-02  Francois Dumont  <dums@stlport...>
 
 	* 5.1.3 released based on revision 2983. STLport-5.1.3 tag created.
